UI|Fix: `ProjectCard` text overflow
Fixes #360

--- a/frontend/src/components/ProjectCard/index.module.scss
+++ b/frontend/src/components/ProjectCard/index.module.scss
@@ -10,3 +10,7 @@
 .card:hover {
   text-decoration: none;
 }
+
+.cardText {
+  overflow-wrap: break-word;
+}
